[package]
name = "standX-mm-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "standx_mm"
path = "src/lib.rs"

[[bin]]
name = "standx-mm"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full", "signal"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Decimal arithmetic
rust_decimal = { version = "1.36", features = ["serde", "serde-with-str", "serde-with-float"] }
rust_decimal_macros = "1.36"

# Cryptography - Ed25519 signing
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
bs58 = "0.5"
base64 = "0.22"

# Ethereum wallet signing (BSC compatible)
ethers = { version = "2.0", features = ["legacy"] }

# UUID generation
uuid = { version = "1.10", features = ["v4"] }

# Hex encoding/decoding
hex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# URL handling
url = "2.5"

[dev-dependencies]
# Property-based testing
proptest = "1.5"
tokio-test = "0.4"
regex = "1.10"

[profile.release]
opt-level = 3
lto = true
